Issue #14701:  Add missing support for 'raise ... from' in parser module.